--- a/index.html
+++ b/index.html
@@ -12,22 +12,29 @@
     font-family: 'Gloria Hallelujah', cursive;
   }
 </style>
-<body style="background-color: #967bb6; color: #281e34; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-<div style="max-width: 450px; margin-top: 50px">
+<body style="background-color: #967bb6; color: #432d5e; display: flex; flex-direction: column; justify-content: center; align-items: center; position: relative">s
+<div style="max-width: 450px; margin-top: 50px; font-size: 18p">
 
     My lil Garfield,
   <br/><br/>
   To start with - I’ve been one of those people who had little to no faith on what people call love. 
-  Never been a romantic, I was proudly a rational, laughing at these mere mortals deluding 
+  Never been a romantic, Now look at me buying this domain and writing this letter.
+  
+  I was proudly a rational, laughing at these mere mortals deluding 
   themselves of such a great lie but life gives you bouncer that also such a beautiful one. 
-
+<br/><br/>
   Huh, I AM IN LOVE. Never before it felt like this. Never before it felt this RIGHT. Never before it
   felt this COMPLETE.  How did I find you? Life is generally not this lucky for me. You are the most 
   beautiful, nicest, smartest, coolest and funniest angel anyone can get and somehow happens
   to be me. 
 
+  <br/><br/>
+
   Trust me, any of this I am not used to, too sweet, almost diabetic. Please tell me this - Why are you so cute? 
+  <br/><br/>
   If it were to me I would like to marry you today, but for now, will you be my valentine?
+<br/><br/>
+  Chhota Bheem
 </div>
     
 
