--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     font-family: 'Gloria Hallelujah', cursive;
   }
 </style>
-<body style="background-color: #967bb6; color: #432d5e; display: flex; flex-direction: column; justify-content: center; align-items: center; position: relative">s
+<body style="background-color: #967bb6; color: #432d5e; display: flex; flex-direction: column; justify-content: center; align-items: center; position: relative">
 <div style="max-width: 450px; margin-top: 50px; font-size: 18p">
 
     My lil Garfield,
