--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body style="background-color: #967bb6; color: #432d5e; display: flex; flex-direction: column; justify-content: center; align-items: center; position: relative">
 <div style="max-width: 450px; margin-top: 50px; font-size: 18p">
 
-    My lil Garfield,
+    <!-- My lil Garfield,
   <br/><br/>
   To start with - I’ve been one of those people who had little to no faith on what people call love. 
   Never been a romantic, Now look at me buying this domain and writing this letter.
@@ -34,7 +34,7 @@
   <br/><br/>
   If it were to me I would like to marry you today, but for now, will you be my valentine?
 <br/><br/>
-  Chhota Bheem
+  Chhota Bheem -->
 </div>
     
 
